--- a/source/templates/footer.twig
+++ b/source/templates/footer.twig
@@ -25,7 +25,7 @@
       <div class="footer-container page__centerer">
         <div class="footer-logo">
           <a class="footer-logo__link" href="index.html">
-            <img class="footer-logo__image" src="./img/logo-cat-text.svg" width="128" height="24" alt="Логотип Кэт-энерджи.">
+            <img class="footer-logo__image" src="./img/identics.svg#logotype" width="128" height="24" alt="Логотип Кэт-энерджи.">
           </a>
         </div>
 
