--- a/source/templates/header.twig
+++ b/source/templates/header.twig
@@ -7,7 +7,7 @@
         <img class="logo__icon" src="./img/identics.svg#icon-s" width="34" height="39" alt="Иконка кэт-энерджи.">
       </picture>
       <svg class="logo__text">
-        <use xlink:href="./img/identics.svg#logotype">
+        <use xlink:href="./img/identics.svg#logotype"></use>
       </svg>
     </a>
     <button class="menu-toggle menu-toggle--noJS" type="button">
