--- a/source/sass/blocks/academy-logo.scss
+++ b/source/sass/blocks/academy-logo.scss
@@ -1,7 +1,7 @@
 .academy-logo {
   grid-column: 3;
   display: flex;
-  padding-top: 22px;
+  padding-top: 19px;
   box-sizing: border-box;
   align-items: center;
   justify-content: space-between;
@@ -21,11 +21,11 @@
 
   &::after {
     position: relative;
-    top: 0;
-    left: 0;
+    top: 1px;
+    left: 7px;
     display: block;
-    width: 30px;
-    height: 30px;
+    width: 41px;
+    height: 35px;
     padding-left: 16px;
     box-sizing: border-box;
     content: "";
