--- a/source/sass/blocks/control.scss
+++ b/source/sass/blocks/control.scss
@@ -4,6 +4,10 @@
   justify-content: space-between;
   box-sizing: border-box;
 
+  @media (--narrow-vp) {
+    transform: translateY(-15px);
+  }
+
   @media (--not-narrow-vp) {
     width: 592px;
   }
@@ -17,6 +21,7 @@
   @media (--narrow-vp) {
     --scale-width: 86px;
     --scale-height: 14px;
+    margin: 0 12px;
     background-color: var(--color__white);
     border: 1px solid var(--color__light-grey);
   }
