--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -14,7 +14,6 @@
 .slider__images {
   display: grid;
   grid-template-columns: var(--current-position) calc(100% - var(--current-position));
-  // width: 100%;
   min-width: 280px;
 
   @media (--narrow-vp) {
@@ -31,7 +30,7 @@
 .slider__image {
   display: block;
   width: 100%;
-  height: 266px;
+  // height: 266px;
   object-fit: cover;
 
   @media (--not-narrow-vp) {
@@ -44,5 +43,10 @@
 
   &--after {
     object-position: right top;
+
+    @media (--narrow-vp) {
+      width: 90%;
+      transform: translateX(20px);
+    }
   }
 }
