--- a/source/sass/blocks/header-nav.scss
+++ b/source/sass/blocks/header-nav.scss
@@ -55,11 +55,10 @@
 
   @media (--not-narrow-vp) {
     width: 57%;
-    // max-width: 490px;
   }
 
   @media (--wide-vp) {
-    width: 40%;
+    width: 32%;
     z-index: 2;
   }
 
@@ -170,6 +169,10 @@
       width: 100%;
       height: 2px;
       background-color: var(--color__green);
+
+      @media (--wide-vp) {
+        top: 110%;
+      }
     }
   }
 
