--- a/source/sass/blocks/logo.scss
+++ b/source/sass/blocks/logo.scss
@@ -34,7 +34,7 @@
 
   @media (--wide-vp) {
     width: 70px;
-    height: auto;
+    height: 60px;
   }
 }
 
@@ -50,8 +50,9 @@
   }
 
   @media (--wide-vp) {
-    height: 20px;
+    height: 22px;
+    width: 132px;
+    padding-left: 5px;
     --fill: var(--color__dark-grey);
-
   }
 }
