--- a/source/sass/blocks/stock.scss
+++ b/source/sass/blocks/stock.scss
@@ -4,9 +4,9 @@
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
-  padding-top: 130px;
+  padding-top: 131px;
   padding-bottom: 43px;
-  min-height: 290px;
+  min-height: 117px;
   color: var(--color__white);
   background-image: linear-gradient(
     rgba(104, 183, 56, 0.85),
@@ -28,7 +28,7 @@
   }
 
   @media (--not-narrow-vp) {
-    min-height: 200px;
+    min-height: 86px;
     padding-top: 72px;
     justify-content: flex-start;
     background-image: linear-gradient(
@@ -54,6 +54,7 @@
 
   @media (--wide-vp) {
     width: 22%;
+    min-height: 175px;
     padding-right: 40px;
     justify-self: center;
     background-image:linear-gradient(
@@ -77,18 +78,27 @@
 
   &::before {
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 60px;
+    left: 50%;
+    transform: translateX(-50%);
     display: block;
     width: 78px;
     height: 80px;
     content: "";
     background: url("../../icons/sprite.svg#gift") 50% 50% no-repeat;
 
-    @media (--not-narrow-vp) {
-      top: 50%;
-      transform: translateY(-50%);
-      left: 10%;
+    @media (--middle-vp) {
+      top: 28%;
+      transform: translateY(-28%);
+      left: 11%;
+    }
+
+    @media (--wide-vp) {
+      top: 27%;
+      transform: translateY(-26%);
+      left: 35%;
+      width: 81px;
+      height: 81px;
     }
   }
 }
@@ -100,11 +110,14 @@
   line-height: 1.25;
   font-size: 1rem;
 
-  @media (--not-narrow-vp) {
-    align-self: flex-end;
+  @media (--middle-vp) {
+    // align-self: flex-end;
+    padding-left: 43%;
   }
 
   @media (--wide-vp) {
+    padding: 117px 0 0 5px;
     text-align: center;
+    align-self: end;
   }
 }
